[tool.poetry]
name = "summarize_dataframe"
version = "0.1.0"
description = ""
authors = ["AABur <aabur@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pynvim = "^0.4.3"
numpy = "^1.22.0"
pandas = "^1.3.4"
commitizen = "^2.20.0"
pre-commit = "^2.15.0"
autopep8 = "^1.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
tox = "^3.24.4"
tox-gh-actions = "^2.8.1"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
